--- a/ecjobla.plist
+++ b/ecjobla.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www.ecjob.la/ecjobla145.ipa</string>
+					<string>http://www.ecjob.la/appdownload/ios/ios146.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
